      with io::File::readGridPartial().
      [Reported by Nick Avramoussis]
    - tools::MultiResGrid now supports all standard grid types, including
      BoolGrid and MaskGrid.
    - Fixed a bug that caused tools::copyToDense() to only partially populate
      the output array when delayed loading was in effect.
      [Reported by Stuart Levy]
    - Fixed a thread race condition in math::QuantizedUnitVec that could
      cause it to produce incorrect results.
      [Contributed by Jeff Lait]


    API changes:
    - Introduced some C++11 constructs.  A C++11-compatible compiler
      is now required.
    - Added a parameter to the point scattering tools to control the
      displacement of each point from the center of its host voxel or tile.
      The default behavior, as before, is to allow each point to be placed
      (randomly) anywhere within its voxel or tile.
    - Renamed LeafManager::getPreFixSum() to LeafManager::getPrefixSum().
    - Made LeafNode::Buffer a top-level class and renamed it to LeafBuffer.
      [Contributed by Double Negative]
    - Deprecated io::File::readGridPartial() in favor of delayed loading.
    - tools::ClosestSurfacePoint::initialize() now returns a boolean
      indicating whether initialization was successful.

    Python:
    - Fixed a build issue with Python 3 and NumPy.
      [Contributed by Jonathan Scruggs]

    Houdini:
    - Introduced some C++11 constructs that are incompatible with
      versions of Houdini older than 15.0.
    - Fixed a bug in the Rasterize Points SOP that caused vector-valued
      attributes to be transferred as scalars.
      [Contributed by Double Negative]
    - Fixed a crash in the Ray SOP when the user selected an isosurface
      outside the target volume's narrow band.
    - Added a toggle to the Clip SOP to invert the clipping mask.
    - Added a slider to the Scatter SOP to specify how far each point
      may be displaced from the center of its host voxel or tile.